[gd_scene load_steps=5 format=3 uid="uid://bnr8tteeo0epi"]

[ext_resource type="PackedScene" uid="uid://dmpkbdyoo1qvm" path="res://scenes/panels/Panel.tscn" id="1_klwh3"]
[ext_resource type="Script" path="res://scripts/energy_controls_panel.gd" id="2_cr43r"]
[ext_resource type="Texture2D" uid="uid://bkp8kobr4hn5e" path="res://assets/images/slider-button.png" id="4_4kcdb"]
[ext_resource type="Texture2D" uid="uid://dkhjchkrqlxnc" path="res://assets/images/ship-icons.png" id="4_4pq0l"]

[node name="Panel" instance=ExtResource("1_klwh3")]
script = ExtResource("2_cr43r")

[node name="Background" parent="." index="0"]
region_rect = Rect2(0, 190, 418, 297)

[node name="Control" type="Control" parent="." index="1"]
layout_mode = 3
anchors_preset = 0
offset_top = 9.0
offset_right = 40.0
offset_bottom = 49.0

[node name="SensorsVSlider" type="VSlider" parent="Control" index="0"]
layout_mode = 0
offset_left = -169.0
offset_top = -114.0
offset_right = -119.0
offset_bottom = 64.0
theme_override_icons/grabber = ExtResource("4_4kcdb")
theme_override_icons/grabber_highlight = ExtResource("4_4kcdb")

[node name="WeaponsVSlider" type="VSlider" parent="Control" index="1"]
layout_mode = 0
offset_left = -96.0
offset_top = -114.0
offset_right = -46.0
offset_bottom = 64.0
theme_override_icons/grabber = ExtResource("4_4kcdb")
theme_override_icons/grabber_highlight = ExtResource("4_4kcdb")

[node name="ShieldsVSlider" type="VSlider" parent="Control" index="2"]
layout_mode = 0
offset_left = -25.0
offset_top = -114.0
offset_right = 25.0
offset_bottom = 64.0
theme_override_icons/grabber = ExtResource("4_4kcdb")
theme_override_icons/grabber_highlight = ExtResource("4_4kcdb")

[node name="EngineVSlider" type="VSlider" parent="Control" index="3"]
layout_mode = 0
offset_left = 47.0
offset_top = -114.0
offset_right = 97.0
offset_bottom = 64.0
theme_override_icons/grabber = ExtResource("4_4kcdb")
theme_override_icons/grabber_highlight = ExtResource("4_4kcdb")

[node name="LifeSupportVSlider" type="VSlider" parent="Control" index="4"]
layout_mode = 0
offset_left = 120.0
offset_top = -114.0
offset_right = 170.0
offset_bottom = 64.0
theme_override_icons/grabber = ExtResource("4_4kcdb")
theme_override_icons/grabber_highlight = ExtResource("4_4kcdb")

[node name="Icons" type="Node2D" parent="." index="2"]
position = Vector2(0, -6)

[node name="SensorsIcon" type="Sprite2D" parent="Icons" index="0"]
position = Vector2(-144, 110)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_4pq0l")
region_enabled = true
region_rect = Rect2(200, 0, 100, 100)

[node name="WeaponsIcon" type="Sprite2D" parent="Icons" index="1"]
position = Vector2(-72, 110)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_4pq0l")
region_enabled = true
region_rect = Rect2(300, 0, 100, 100)

[node name="ShieldsIcon" type="Sprite2D" parent="Icons" index="2"]
position = Vector2(0, 110)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_4pq0l")
region_enabled = true
region_rect = Rect2(100, 0, 100, 100)

[node name="EngineIcon" type="Sprite2D" parent="Icons" index="3"]
position = Vector2(72, 110)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_4pq0l")
region_enabled = true
region_rect = Rect2(400, 0, 100, 100)

[node name="LifeSupportIcon" type="Sprite2D" parent="Icons" index="4"]
position = Vector2(144, 110)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_4pq0l")
region_enabled = true
region_rect = Rect2(0, 0, 100, 100)

[node name="RichTextLabel" parent="." index="3"]
offset_left = -174.0
offset_top = -143.0
offset_right = 195.0
offset_bottom = -101.0
theme_override_font_sizes/normal_font_size = 18
text = "Energy Flow Controllers"

[connection signal="drag_ended" from="Control/SensorsVSlider" to="." method="_on_sensors_v_slider_drag_ended"]
[connection signal="drag_ended" from="Control/WeaponsVSlider" to="." method="_on_weapons_v_slider_drag_ended"]
[connection signal="drag_ended" from="Control/ShieldsVSlider" to="." method="_on_shields_v_slider_drag_ended"]
[connection signal="drag_ended" from="Control/EngineVSlider" to="." method="_on_engine_v_slider_drag_ended"]
[connection signal="drag_ended" from="Control/LifeSupportVSlider" to="." method="_on_life_support_v_slider_drag_ended"]
